# e3

./: .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SKILL.md  STANDARDS.md  TODO.md  USAGE.md  VIEWER.md  eslint.config.js  package-lock.json  package.json  renovate.json  tsconfig.json
.github/workflows/: publish.yml  test.yml  update-deps.yml
contrib/: demo.sh  example.ts  server-client.sh  types.ts
design/: 01_overview.md  02_execute.md  03_registry.md  04_runners.md  05_cli.md  06_modules_and_packages.md  07_data.md  08_example.md  e3-api.md  e3-chat-interface.md  e3-cli.md  e3-core-error-handling.md  e3-core.md  e3-dataset-status.md  e3-execution-history.md  e3-execution.md  e3-fuzz.md  e3-mvp-cli.md  e3-mvp-core.md  e3-mvp.md  e3-reactive-dataflow.md  e3-watch.md  e3.md  east.md  repo-manager-abstraction.md  task-runner-implementation.md
e3-cli/: eslint.config.js  package.json
e3-cli/src/: cli-test-helpers.ts  cli.ts  repo.tsx
e3-core/: README.md  eslint.config.js  package.json  tsconfig.json
e3-core/src/: formats.ts  index.ts  objects.spec.ts  repository.spec.ts  repository.ts  resolve.ts  tasks.ts  test-helpers.ts
e3-runner-node/: package-lock.json  package.json  tsconfig.json
e3-runner-node/src/: repo.ts  storage.ts
e3-types/: package.json
e3cli/: package-lock.json  package.json
e3cli/src/: cli.ts  index.ts  repo.tsx
e3dk/: package.json
e3dk/src/: index.ts
integration-tests/: package.json  tsconfig.json
integration-tests/src/: e2e-workflow.spec.ts  helpers.ts  init.spec.ts  ir-helpers.ts  runner-execution.spec.ts  signal-handling.spec.ts  task-execution.spec.ts  task-operations.spec.ts
javascript/e3-runner-node/: package-lock.json  package.json
python/e3-runner-python/: README.md  pyproject.toml
python/e3-runner-python/e3_runner/: __init__.py  runner.py
test/: helpers.ts  index.ts  package.json  reporter.ts  runner.ts  tsconfig.json
(+87 files in other folders)
