[project]
name = "e3-runner-python"
version = "0.1.0"
description = "East Execution Engine Python Runner - Execute East tasks in the Python runtime"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "East Contributors", email = "east@example.com"}
]
keywords = ["east", "e3", "runner", "python", "execution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Private :: Do Not Upload",
]

dependencies = [
    "east-py @ git+https://github.com/elaraai/east-py.git",
    "east-py-std @ git+https://github.com/elaraai/east-py-std.git",
    "watchdog>=4.0.0",
]

[project.scripts]
e3-runner-python = "e3_runner.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["e3_runner"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --cov=e3_runner --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
]
ignore = [
    "E501",   # Line too long
]
